# dreamcatcher-be

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yaml
database/: __init__.py  connection.py  models.py  queries.py  schemas.py
llm/: chat.py  image.py  store.py
models/: dream_generator.py
models/base/: image_preview.py  llm.py
prompts/: dream.txt
routers/: __init__.py  dream_interpret.py  dreams.py  health.py  home.py
routers/functions/: __init__.py  dream_generator.py
